--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,8 +29,14 @@
     <link href="/css/signin.css" rel="stylesheet">
   </head>
     <body class="text-center">
-        <form class="form-signin">
+        <form class="form-signin" th:action="@{/perform_login}" method="post">
             <img class="mb-4" src="/image/squarred-logo-512.png" alt="" width="72" height="72">
+            <div th:if="${param.error}" class="alert alert-error">
+                Invalid username and password.
+            </div>
+            <div th:if="${param.logout}" class="alert alert-success">
+                You have been logged out.
+            </div>
             <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
@@ -42,7 +48,7 @@
                 </label>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-            <p class="mt-4 mb-3"><a href="forgot-password">forgot my password</a></p>
+            <p class="mt-4 mb-3"><a th:href="@{/forgot-password}">forgot my password</a></p>
 
             <p class="mt-5 mb-3 text-muted">Kreinto &copy; 2020</p>
         </form>
